Replace `result.get(0)` with `result.getFirst()` in unit tests